Storing Secret Keys

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+MY_KEY="4d1a58e9b1f74b729afe947be4e9d7ca"
+MY_URL="https://newsapi.org"
